[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freerec"
version = "0.9.7"
description = "PyTorch library for recommender systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "MTandHJ", email = "congxueric@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "polars>=1.9.0",
    "PyYAML>=6.0",
    "tensorboard>=2.10.0",
    "prettytable>=3.4.1",
    "matplotlib>=3.5.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
graph = ["torch-geometric>=2.4.0"]
metrics = ["scikit-learn>=1.0.0"]
nn = ["einops>=0.6.0"]
docs = [
    "sphinx>=7.2",
    "pydata-sphinx-theme>=0.15",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-intl>=2.0",
]
all = [
    "freerec[graph]",
    "freerec[metrics]",
    "freerec[nn]",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.0",
    "pre-commit>=3.0",
]

[project.scripts]
freerec = "freerec.__main__:main"

[project.urls]
Homepage = "https://github.com/MTandHJ/freerec"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"freerec/launcher.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["freerec"]

[tool.hatch.build]
include = [
    "freerec/**/*.py",
    "freerec/**/*.pyi",
]
